# BoundBoxESP

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3
.github/workflows/: esp_idf.yml  platformio.yml
components/assets/: CMakeLists.txt  icon_09.c  icon_14.c
components/base64/: CMakeLists.txt  base64.cc  base64.h
components/blob/: CMakeLists.txt
components/blob/include/blob/: base64.h  bytes.h  errors.h  hash.h  hex.h  wolfssl_init.h
components/blob/src/: base64.cc  hash.cc  hex.cc
components/defer/: CMakeLists.txt  README.md  defer.h
components/hardware/: CMakeLists.txt  Kconfig  idf_component.yml
components/hardware/include/hardware/: manager.h  net.h  net_config.h
components/hardware/src/: config.h  manager.cc  net.cc  net_common.cc  net_common.h  net_eth.cc  net_eth.h  net_usb.cc  net_usb.h  net_wifi.cc  net_wifi.h
components/hash/: CMakeLists.txt
components/hash/include/: hash.h  types.h  wolfssl_init.h
components/hash/src/: hash.cc
components/lilygo/: CMakeLists.txt  idf_component.yml
components/lilygo/include/lilygo/: batt.h  board.h  display.h  temp.h  touch.h
components/lilygo/src/: batt.cc  board.cc  board_config.h  display.cc  temp.cc  touch.cc
components/peripheral/: CMakeLists.txt  Kconfig
components/peripheral/include/peripheral/: manager.h  manger.h  net.h  spi.h
components/peripheral/src/: manager.cc  net.cc  net_common.h  net_eth.cc  net_eth.h  net_wifi.cc  net_wifi.h  peripheral_config.h  spi.cc
components/preferences/: CMakeLists.txt  Kconfig  preferences.cc  preferences.h
components/ssh/: CMakeLists.txt  Kconfig
components/ssh/include/ssh/: auth_provider.h  common.h  config.h  errors.h  handler.h  keyring.h  keys.h  libssh_esp.h  server.h  stream.h
components/ssh/src/: auth.cc  auth.h  auth_provider.cc  common.cc  common.h  keyring.cc  keys.cc  server.cc  ssh_config.h  stream.cc  wolfssh_init.h
components/t_amoled/: CMakeLists.txt
components/t_amoled/include/t_amoled/: batt.h  board.h  display.h  lvgl.h  temp.h  touch.h
components/t_amoled/src/: batt.cc  board.cc  board_config.h  display.cc  lvgl.cc  temp.cc  touch.cc
components/ui/: CMakeLists.txt  Kconfig
components/ui/assets/: font_roboto_black_20.c  font_roboto_mono_20.c  font_roboto_mono_24.c  font_roboto_mono_32.c  icon_11.c
components/ui/include/ui/: button.h  manager.h  scene.h
components/ui/src/: button.cc  gui.cc  gui.h  manager.cc  scene.cc
hacks/: lv_conf.h
lib/Defer/: Defer.h  README.md
lib/hmac/: hmac.cpp  hmac.h
lib/result/: README.md  result.h
lib/util/: bytes.cpp  bytes.h  defer.h
lib/xssh/: libssh_esp.h  stream.cpp  stream.h  types.cpp  types.h  xssh.cpp  xssh.h
lib_/hmac/: hmac.h
lib_/util/: base64.cpp  base64.h  hex.cpp  hex.h
lib_/xssh/: types.h  xssh.h
main/: CMakeLists.txt  Kconfig  Kconfig.projbuild  authenticator.cc  authenticator.h  commands.cc  commands.h  common.h  errors.h  events.h  hardware.h  idf_component.yml  main.c  main.cc  secrets.cc  secrets.h  ssh_server.c  ssh_server.h  ssh_server_config.c  ssh_server_config.h  uart_helper.c  ui.h  wifi.c
src/: auth_log.cpp  authenticator.cpp  authenticator.h  board_config.h  board_manager.cpp  board_manager.h  config.cpp  config.h  defaults.h  gui.cpp  gui.h  main.cpp  net_manager.cpp  net_manager.h  pin_provider.h  pref_store.cpp  pref_store.h  secrets.cpp  secrets.h  ssh_handler.cpp  ssh_handler.h  ssh_service.cpp  ssh_service.h  ui_manager.cpp  ui_manager.h
src/assets/: font_roboto_black_12.c  font_roboto_black_14.c  font_roboto_black_20.c  font_roboto_black_24.c  font_roboto_black_8.c  font_roboto_mono_20.c  font_roboto_mono_32.c  font_roboto_regular_12.c  font_roboto_regular_14.c  font_roboto_regular_20.c  font_roboto_regular_24.c  font_roboto_regular_8.c  font_ubuntu_regular_10.c  font_ubuntu_regular_12.c  font_ubuntu_regular_14.c  font_ubuntu_regular_16.c  font_ubuntu_regular_24.c  font_ubuntu_regular_8.c  icon_00.c  icon_01.c  icon_02.c  icon_03.c  icon_04.c  icon_05.c  icon_06.c  icon_07.c  icon_08.c  icon_09.c  icon_10.c  icon_11.c  icon_12.c  icon_13.c  icon_14.c  icon_15.c
src_/: auth_log.cpp  auth_log.h  authenticator.cpp  authenticator.h  board_config.h  board_manager.cpp  board_manager.h  config.cpp  gui.h  pref_store.cpp  ssh_handler.cpp  ssh_service.cpp  ssh_service.h  ui_manager.cpp  ui_manager.h
test/: README
